security-azure/restrictive-public-nsg-arm-template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "defaultValue": "",
            "type": "string"
        },
        "name": {
            "defaultValue": "public-subnet-NSG",
            "type": "string"
        }
    },
    "variables": {
        "location": "[if(equals(parameters('location'), ''), resourceGroup().location, parameters('location'))]"
    },
    "resources": [
        {
            "comments": "CF Restrictive Public NSG Template allowing only HTTP and HTTPS traffic",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('name')]",
            "apiVersion": "2018-01-01",
            "location": "[variables('location')]",
            "scale": null,
            "properties": {
                "securityRules": [
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        }
    ],
    "outputs": {
        "name": {
            "type": "string",
            "value": "[parameters('name')]"
        }
    }
}
